; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/sproto/extr_sproto.c_encode_object.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/sproto/extr_sproto.c_encode_object.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sproto_arg = type { i32, i32* }

@SIZEOF_LENGTH = common dso_local global i32 0, align 4
@SPROTO_CB_NIL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32 (%struct.sproto_arg*)*, %struct.sproto_arg*, i32*, i32)* @encode_object to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @encode_object(i32 (%struct.sproto_arg*)* %0, %struct.sproto_arg* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32 (%struct.sproto_arg*)*, align 8
  %7 = alloca %struct.sproto_arg*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32 (%struct.sproto_arg*)* %0, i32 (%struct.sproto_arg*)** %6, align 8
  store %struct.sproto_arg* %1, %struct.sproto_arg** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  %11 = load i32, i32* %9, align 4
  %12 = load i32, i32* @SIZEOF_LENGTH, align 4
  %13 = icmp slt i32 %11, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %4
  store i32 -1, i32* %5, align 4
  br label %49

15:                                               ; preds = %4
  %16 = load i32*, i32** %8, align 8
  %17 = load i32, i32* @SIZEOF_LENGTH, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds i32, i32* %16, i64 %18
  %20 = load %struct.sproto_arg*, %struct.sproto_arg** %7, align 8
  %21 = getelementptr inbounds %struct.sproto_arg, %struct.sproto_arg* %20, i32 0, i32 1
  store i32* %19, i32** %21, align 8
  %22 = load i32, i32* %9, align 4
  %23 = load i32, i32* @SIZEOF_LENGTH, align 4
  %24 = sub nsw i32 %22, %23
  %25 = load %struct.sproto_arg*, %struct.sproto_arg** %7, align 8
  %26 = getelementptr inbounds %struct.sproto_arg, %struct.sproto_arg* %25, i32 0, i32 0
  store i32 %24, i32* %26, align 8
  %27 = load i32 (%struct.sproto_arg*)*, i32 (%struct.sproto_arg*)** %6, align 8
  %28 = load %struct.sproto_arg*, %struct.sproto_arg** %7, align 8
  %29 = call i32 %27(%struct.sproto_arg* %28)
  store i32 %29, i32* %10, align 4
  %30 = load i32, i32* %10, align 4
  %31 = icmp slt i32 %30, 0
  br i1 %31, label %32, label %38

32:                                               ; preds = %15
  %33 = load i32, i32* %10, align 4
  %34 = load i32, i32* @SPROTO_CB_NIL, align 4
  %35 = icmp eq i32 %33, %34
  br i1 %35, label %36, label %37

36:                                               ; preds = %32
  store i32 0, i32* %5, align 4
  br label %49

37:                                               ; preds = %32
  store i32 -1, i32* %5, align 4
  br label %49

38:                                               ; preds = %15
  %39 = load i32, i32* %10, align 4
  %40 = load i32, i32* %9, align 4
  %41 = load i32, i32* @SIZEOF_LENGTH, align 4
  %42 = sub nsw i32 %40, %41
  %43 = icmp sle i32 %39, %42
  %44 = zext i1 %43 to i32
  %45 = call i32 @assert(i32 %44)
  %46 = load i32*, i32** %8, align 8
  %47 = load i32, i32* %10, align 4
  %48 = call i32 @fill_size(i32* %46, i32 %47)
  store i32 %48, i32* %5, align 4
  br label %49

49:                                               ; preds = %38, %37, %36, %14
  %50 = load i32, i32* %5, align 4
  ret i32 %50
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @fill_size(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
